--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -8,28 +8,171 @@
     </div>
     <div style="width: 100%; border-top: 2px solid"></div>
     <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
-        <nav class="uk-navbar-container" uk-navbar style="background: rgba(255, 255, 255, 0.7); border-bottom-left-radius: 15px; border-bottom-right-radius: 15px">
+        <nav class="uk-navbar-container" uk-navbar
+            style="background: rgba(255, 255, 255, 0.7); border-bottom-left-radius: 15px; border-bottom-right-radius: 15px">
             <div class="uk-navbar-left">
                 <ul class="uk-navbar-nav">
+                    <li class="uk-active"><a href="#main-menu" class="" uk-toggle
+                            uk-icon="menu"></a></li>
+
+                    <!-- start of amin menu -->
+                    <div id="main-menu" uk-offcanvas>
+                        <div class="uk-offcanvas-bar">
+                            <ul class="uk-nav uk-nav-default">
+                                <li class="uk-active"><a href="#designer-clothes-menu" class="uk-button uk-button-text"
+                                        uk-toggle>Дизайнерская одежда</a></li>
+                                <li class="uk-active"><a href="#designer-shoes-menu" class="uk-button uk-button-text"
+                                        uk-toggle>Дизайнерская обувь</a></li>
+                                <li class="uk-active"><a href="#bags-menu" class="uk-button uk-button-text"
+                                        uk-toggle>Сумки</a></li>
+                                <li class="uk-active"><a href="#interior-menu" class="uk-button uk-button-text"
+                                        uk-toggle>Интерьер</a></li>
+                                <li class="uk-active"><a href="#decorations-menu" class="uk-button uk-button-text"
+                                        uk-toggle>Украшщения</a></li>
+                                <li class="uk-active"><a href="#sculptures-menu" class="uk-button uk-button-text"
+                                        uk-toggle>Скульптуры</a></li>
+                                <li class="uk-active"><a href="#pillows-menu" class="uk-button uk-button-text"
+                                        uk-toggle>Подушки</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                    <!-- end of main menu -->
+
+                    <!-- start of designer-clothes-menu -->
+                    <div id="designer-clothes-menu" uk-offcanvas>
+                        <div class="uk-offcanvas-bar">
+                            <ul class="uk-nav uk-nav-default">
+                                <li class="uk-active" style="padding-left: 90%;"><a href="#main-menu" class="uk-button uk-button-link" uk-toggle
+                                        uk-icon="icon: reply"></a></li>
+                                <li class="uk-active"><a href="#">esigner1</a></li>
+                                <li class="uk-active"><a href="#">esigner2</a></li>
+                                <li class="uk-active"><a href="#">esigner3</a></li>
+                                <li class="uk-active"><a href="#">esigner4</a></li>
+                                <li class="uk-active"><a href="#">esigner5</a></li>
+                                <li class="uk-active"><a href="#">esigner6</a></li>
+                                <li class="uk-active"><a href="#">esigner7</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- end of designer-clothes-menu -->
+
+                    <!-- start of designer-shoes-menu -->
+                    <div id="designer-shoes-menu" uk-offcanvas>
+                        <div class="uk-offcanvas-bar">
+                            <ul class="uk-nav uk-nav-default">
+                                <li class="uk-active" style="padding-left: 90%;"><a href="#main-menu" class="uk-button uk-button-link" uk-toggle
+                                        uk-icon="icon: reply"></a></li>
+                                <li class="uk-active"><a href="#">esigner1</a></li>
+                                <li class="uk-active"><a href="#">esigner2</a></li>
+                                <li class="uk-active"><a href="#">esigner3</a></li>
+                                <li class="uk-active"><a href="#">esigner4</a></li>
+                                <li class="uk-active"><a href="#">esigner5</a></li>
+                                <li class="uk-active"><a href="#">esigner6</a></li>
+                                <li class="uk-active"><a href="#">esigner7</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- end of designer-shoes-menu -->
+
+                    <!-- start of bags-menu -->
+                    <div id="bags-menu" uk-offcanvas>
+                        <div class="uk-offcanvas-bar">
+                            <ul class="uk-nav uk-nav-default">
+                                <li class="uk-active" style="padding-left: 90%;"><a href="#main-menu" class="uk-button uk-button-link" uk-toggle
+                                        uk-icon="icon: reply"></a></li>
+                                <li class="uk-active"><a href="#">bags1</a></li>
+                                <li class="uk-active"><a href="#">bags2</a></li>
+                                <li class="uk-active"><a href="#">bags3</a></li>
+                                <li class="uk-active"><a href="#">bags4</a></li>
+                                <li class="uk-active"><a href="#">bags5</a></li>
+                                <li class="uk-active"><a href="#">bags6</a></li>
+                                <li class="uk-active"><a href="#">bags7</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- end of #bags-menu -->
+
+                    <!-- start of interior-menu -->
+                    <div id="interior-menu" uk-offcanvas>
+                        <div class="uk-offcanvas-bar">
+                            <ul class="uk-nav uk-nav-default">
+                                <li class="uk-active" style="padding-left: 90%;"><a href="#main-menu" class="uk-button uk-button-link" uk-toggle
+                                        uk-icon="icon: reply"></a></li>
+                                <li class="uk-active"><a href="#">interior1</a></li>
+                                <li class="uk-active"><a href="#">interior2</a></li>
+                                <li class="uk-active"><a href="#">interior3</a></li>
+                                <li class="uk-active"><a href="#">interior4</a></li>
+                                <li class="uk-active"><a href="#">interior5</a></li>
+                                <li class="uk-active"><a href="#">interior6</a></li>
+                                <li class="uk-active"><a href="#">interior7</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- end of #interior-menu -->
+
+                    <!-- start of decorations-menu -->
+                    <div id="decorations-menu" uk-offcanvas>
+                        <div class="uk-offcanvas-bar">
+                            <ul class="uk-nav uk-nav-default">
+                                <li class="uk-active" style="padding-left: 90%;"><a href="#main-menu" class="uk-button uk-button-link" uk-toggle
+                                        uk-icon="icon: reply"></a></li>
+                                <li class="uk-active"><a href="#">decorations1</a></li>
+                                <li class="uk-active"><a href="#">decorations2</a></li>
+                                <li class="uk-active"><a href="#">decorations3</a></li>
+                                <li class="uk-active"><a href="#">decorations4</a></li>
+                                <li class="uk-active"><a href="#">decorations5</a></li>
+                                <li class="uk-active"><a href="#">decorations6</a></li>
+                                <li class="uk-active"><a href="#">decorations7</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- end of #decorations-menu -->
+
+                    <!-- start of sculptures-menu -->
+                    <div id="sculptures-menu" uk-offcanvas>
+                        <div class="uk-offcanvas-bar">
+                            <ul class="uk-nav uk-nav-default">
+                                <li class="uk-active" style="padding-left: 90%;"><a href="#main-menu" class="uk-button uk-button-link" uk-toggle
+                                        uk-icon="icon: reply"></a></li>
+                                <li class="uk-active"><a href="#">sculptures1</a></li>
+                                <li class="uk-active"><a href="#">sculptures2</a></li>
+                                <li class="uk-active"><a href="#">sculptures3</a></li>
+                                <li class="uk-active"><a href="#">sculptures4</a></li>
+                                <li class="uk-active"><a href="#">sculptures5</a></li>
+                                <li class="uk-active"><a href="#">sculptures6</a></li>
+                                <li class="uk-active"><a href="#">sculptures7</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- end of #sculptures-menu -->
+
+                    <!-- start of pillows-menu -->
+                    <div id="pillows-menu" uk-offcanvas>
+                        <div class="uk-offcanvas-bar">
+                            <ul class="uk-nav uk-nav-default">
+                                <li class="uk-active" style="padding-left: 90%;"><a href="#main-menu" class="uk-button uk-button-link" uk-toggle
+                                        uk-icon="icon: reply"></a></li>
+                                <li class="uk-active"><a href="#">pillows1</a></li>
+                                <li class="uk-active"><a href="#">pillows2</a></li>
+                                <li class="uk-active"><a href="#">pillows3</a></li>
+                                <li class="uk-active"><a href="#">pillows4</a></li>
+                                <li class="uk-active"><a href="#">pillows5</a></li>
+                                <li class="uk-active"><a href="#">pillows6</a></li>
+                                <li class="uk-active"><a href="#">pillows7</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- end of #pillows-menu -->
+
+
                     <li class="uk-active">
-                        <a href="/">
+                        <a>
                             <h1 class="uk-margin-remove">BeFreela</h1>
                         </a>
-                        <!-- <div class="sidemenu">
-                            <ul>
-                                <li>asd</li>
-                                <li>asd</li>
-                                <li>asd</li>
-                                <li>asd</li>
-                                <li>asd</li>
-                                <li>asd</li>
-                                <li>asd</li>
-                                <li>asd</li>
-                                <li>asd</li>
-                                <li>asd</li>
-                            </ul>
-                        </div> -->
                     </li>
+
                     <li class="uk-active"><a href="/creators/resumes/"
                             style="font-size: 20px; text-transform: none;">Бренды</a></li>
                     <li class="uk-active"><a href="/tasks/"
@@ -40,7 +183,8 @@
             <div class="uk-navbar-right">
                 <div class="uk-search uk-search-default">
                     <a type="submit" href="" id="searchBtn" uk-search-icon></a>
-                    <input class="uk-search-input uk-border-rounded" type="search" placeholder="Search" id="search_pole">
+                    <input class="uk-search-input uk-border-rounded" type="search" placeholder="Search"
+                        id="search_pole">
                 </div>
                 <ul class="uk-navbar-nav">
                     <li class="uk-active">
@@ -64,10 +208,11 @@
             </div>
         </nav>
     </div>
-     {% else %}
+    {% else %}
     <form class="uk-flex uk-flex-between" style="padding: 15px 10% 5px 10%">
         <p style="margin: 0px"> Регион <b>Москва</b></p>
-        <a class="uk-button uk-button-text" style="text-transform: none; font-size: medium;" href="/accounts/login/">Стать
+        <a class="uk-button uk-button-text" style="text-transform: none; font-size: medium;"
+            href="/accounts/login/">Стать
             партнером</a>
     </form>
     <div style="width: 100%; border-top: 2px solid"></div>
@@ -79,8 +224,10 @@
                         <h1 class="uk-margin-remove">BeFreela</h1>
                     </a>
                 </li>
-                <li class="uk-active"><a href="/creators/resumes/" style="font-size: 20px; text-transform: none;">Бренды</a></li>
-                <li class="uk-active"><a href="/accounts/login/" style="font-size: 20px; text-transform: none;">Мастрерская</a></li>
+                <li class="uk-active"><a href="/creators/resumes/"
+                        style="font-size: 20px; text-transform: none;">Бренды</a></li>
+                <li class="uk-active"><a href="/accounts/login/"
+                        style="font-size: 20px; text-transform: none;">Мастрерская</a></li>
             </ul>
         </div>
         <div class="uk-navbar-right">
@@ -99,22 +246,5 @@
             </ul>
         </div>
     </nav>
-    {% endif %} 
+    {% endif %}
 </div>
-
-<style>
-
-    .sidemenu{
-        position: absolute;
-        height: 300px;
-        width: 400px;
-        border: 1px solid;
-        z-index: 999;
-        background-color: white;
-    }
-    .sidemenu > li{
-        list-style-type: "|";
-
-    }
-
-</style>
